[package]
name = "sapo"
version = "0.1.0"
authors = ["Enzo Albornoz <enzocoelhoalbornoz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
comfy-table = "3.0.0"
pest = "2.1.3"
pest_consume = "1.1.1"
pest_consume_macros = "1.1.0"
pest_derive = "2.1.0"
serde = {version = "1.0.126", features = ["derive"]}
serde_plain = "0.3.0"
